--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <div class="login-box">
-      <img src="C:\Users\villa\OneDrive\Imágenes\Zamazor logo.jpg" class="avatar" alt="Avatar Image">
+      <img src="img/Zamazor.jpg" class="avatar" alt="Avatar Image">
       <h1>Compra tu auto en Zamazor</h1>
       <form>
         <!-- USERNAME INPUT -->
