se agrego la pestaña sobre nosotros

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Login | Zamazor</title>
     <link rel="stylesheet" href="esindex.css">
   </head>
-  <body>
+  <body id="login">
 
     <div class="login-box">
       <img src="img/Zamazor.jpg" class="avatar" alt="Avatar Image">
