correccion de la navbar

--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -6,7 +6,26 @@
     <link rel="stylesheet" href="esindex.css">
     <title>Productos</title>
 </head>
-<body>
+<body id="BPEspecificos">
+    <div class="navbar">
+        <div class="item">
+            <a class="logo" href="index.html">
+         <div id="logo"> </div>
+        </a>
+        </div>
+        <div>
+            <a href="productosespecificos.html"> 
+                 <button class="nav">PRODUCTOS</button>
+        </a>
+        </div>
+        <div>
+            <button class="nav">CARRITO</button>
+        </div>
+        <div class="nav" style="background-color:rgba(255, 255, 255, 0) ;">
+           <a href="index.html"><button id="but"><img src="https://github.com/Nahir13/Ecommerce/blob/main/img/user.png?raw=true" style="height: 15px;">Registrar</button></a> 
+            <a href="aboutUs.html"><button id="but"><img src="img/AboutUs.png" style="height: 15px;">Nosotros</button></a>
+        </div>
+    </div>
     <h1>Productos específicos</h1>
 <div class="contenedor">
     <h1>Filtros</h1>
@@ -41,29 +60,29 @@
             <h2>Focos de repuesto</h2>
             <hr>
             <h3><u>Precio</u>: $6.765</h3>
-            <button>Comprar</button>
-            <button>Agregar al carrito</button>
+            <button class="Bproducts">Comprar</button>
+            <button class="Bproducts">Agregar al carrito</button>
         </div>
         <div class="foto1">
             <h2>Optica</h2>
             <hr>
             <h3><u>Precio</u>: $25.000</h3>
-            <button>Comprar</button>
-            <button>Agregar al carrito</button>
+            <button class="Bproducts">Comprar</button>
+            <button class="Bproducts">Agregar al carrito</button>
         </div>
         <div class="foto2">
             <h2>Cubre Asiento</h2>
             <hr>
             <h3><u>Precio</u>: $58.275</h3>
-            <button>Comprar</button>
-            <button>Agregar al carrito</button>
+            <button class="Bproducts">Comprar</button>
+            <button class="Bproducts">Agregar al carrito</button>
         </div>
         <div class="foto3">
             <h2>Apoya Cabeza</h2>
             <hr>
             <h3><u>Precio</u>: $23.749</h3>
-            <button>Comprar</button>
-            <button>Agregar al carrito</button>
+            <button class="Bproducts">Comprar</button>
+            <button class="Bproducts">Agregar al carrito</button>
         </div>
 </div>        
 </body>
