--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
         <input type="password" placeholder="Ingresa tu Contraseña">
-        <a class="shop" href="shop.html">Inicia sesion</a><br><br>
+        <a class="shop" href="Cards.html">Inicia sesion</a><br><br>
         <a href="#">¿Perdiste tu contraseña?</a><br>
         <a href="#">¿No tienes una cuenta?</a>
       </form>
