--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="esindex.css">
-    <title>Productos</title>
+    <title>Zamazor</title>
 </head>
-<body id="BPEspecificos">
+<body>
     <div class="navbar">
         <div class="item">
             <a class="logo" href="index.html">
@@ -16,21 +16,28 @@
         <div>
             <a href="Cards.html"> 
                  <button class="nav">PRODUCTOS</button>
-        </a>
+            </a>
         </div>
         <div>
-            <button class="nav">CARRITO</button>
+            <a href="productosespecificos.html"> 
+                 <button class="nav">ACCESORIOS</button>
+            </a>
         </div>
+    <div>
+        <button class="nav">CARRITO</button>
+    </div>
         <div class="nav" style="background-color:rgba(255, 255, 255, 0) ;">
-           <a href="index.html"><button id="but"><img src="https://github.com/Nahir13/Ecommerce/blob/main/img/user.png?raw=true" style="height: 15px;">Registrar</button></a> 
-            <a href="aboutUs.html"><button id="but"><img src="img/AboutUs.png" style="height: 15px;">Nosotros</button></a>
+            <a href="index.html"><button id="but"><img src="img/user.png" style="height: 15px;">Registrar</button></a>
+            <a href="aboutUs.html"><button id="but"><img src="https://github.com/Nahir13/Ecommerce/blob/main/img/AboutUs.png?raw=true" style="height: 12px;">Nosotros</button>
+            </a>
         </div>
     </div>
-    <h1>Productos específicos</h1>
+<h1>Accesorios</h1>
+    <br>
 <div class="contenedor">
     <h1>Filtros</h1>
     <hr>
-    <p>Color:</p>
+    <h5>Color:</h5>
      <select name="select">
     <option value="Azul" selected>Azul</option>
     <option value="Rojo">Rojo</option>
@@ -38,7 +45,7 @@
     <option value="Negro">Negro</option>
     </select>
     <hr>
-    <p>Marca:</p>
+    <h5>Marca:</h5>
     <select name="select">
         <label for="radio">
     <option value="" selected>Chevrolet</option>
@@ -47,42 +54,42 @@
     <option value="">Tesla</option>
     </select>
     <hr>
-    <p>Precio:</p>
+    <h5>Precio:</h5>
     <select name="select">
     <label for="radio">
-    <option value="Precio" selected>Hasta $1.000.000</option>
-    <option value="">De $1.000.000 a $5.000.000</option>
-    <option value="">Más de $5.000.000</option>
+    <option value="Precio" selected>Hasta $1.000</option>
+    <option value="">De $1.000 a $5.000</option>
+    <option value="">Más de $5.000</option>
     </select>
 </div>
 <div class="productos">
         <div class="foto">
-            <h2>Focos de repuesto</h2>
+            <h4>Focos de repuesto</h4>
             <hr>
             <h3><u>Precio</u>: $6.765</h3>
-            <button class="Bproducts">Comprar</button>
-            <button class="Bproducts">Agregar al carrito</button>
+            <button>Comprar</button>
+            <button>Agregar al carrito</button>
         </div>
         <div class="foto1">
-            <h2>Optica</h2>
+            <h4>Optica</h4>
             <hr>
             <h3><u>Precio</u>: $25.000</h3>
-            <button class="Bproducts">Comprar</button>
-            <button class="Bproducts">Agregar al carrito</button>
+            <button>Comprar</button>
+            <button>Agregar al carrito</button>
         </div>
         <div class="foto2">
-            <h2>Cubre Asiento</h2>
+            <h4>Cubre Asiento</h4>
             <hr>
             <h3><u>Precio</u>: $58.275</h3>
-            <button class="Bproducts">Comprar</button>
-            <button class="Bproducts">Agregar al carrito</button>
+            <button>Comprar</button>
+            <button>Agregar al carrito</button>
         </div>
         <div class="foto3">
-            <h2>Apoya Cabeza</h2>
+            <h4>Apoya Cabeza</h4>
             <hr>
             <h3><u>Precio</u>: $23.749</h3>
-            <button class="Bproducts">Comprar</button>
-            <button class="Bproducts">Agregar al carrito</button>
+            <button>Comprar</button>
+            <button>Agregar al carrito</button>
         </div>
 </div>        
 </body>
