--- a/Cards.html
+++ b/Cards.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cards de autos full fachas</title>
+    <title>Zamazor</title>
     <link rel="stylesheet" href="esindex.css">
 </head>
 <body class="cuerpo">
