correccion de nav 3

--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -23,9 +23,6 @@
                  <button class="nav">ACCESORIOS</button>
             </a>
         </div>
-    <div>
-        <button class="nav">CARRITO</button>
-    </div>
         <div class="nav" style="background-color:rgba(255, 255, 255, 0) ;">
             <a href="index.html"><button id="but"><img src="img/user.png" style="height: 15px;">Registrar</button></a>
             <a href="aboutUs.html"><button id="but"><img src="https://github.com/Nahir13/Ecommerce/blob/main/img/AboutUs.png?raw=true" style="height: 12px;">Nosotros</button>
@@ -67,29 +64,29 @@
             <h4>Focos de repuesto</h4>
             <hr>
             <h3><u>Precio</u>: $6.765</h3>
-            <button>Comprar</button>
-            <button>Agregar al carrito</button>
+            <button class="PButton">Comprar</button>
+            <button class="PButton">Agregar al carrito</button>
         </div>
         <div class="foto1">
             <h4>Optica</h4>
             <hr>
             <h3><u>Precio</u>: $25.000</h3>
-            <button>Comprar</button>
-            <button>Agregar al carrito</button>
+            <button class="PButton">Comprar</button>
+            <button class="PButton">Agregar al carrito</button>
         </div>
         <div class="foto2">
             <h4>Cubre Asiento</h4>
             <hr>
             <h3><u>Precio</u>: $58.275</h3>
-            <button>Comprar</button>
-            <button>Agregar al carrito</button>
+            <button class="PButton">Comprar</button>
+            <button class="PButton">Agregar al carrito</button>
         </div>
         <div class="foto3">
             <h4>Apoya Cabeza</h4>
             <hr>
             <h3><u>Precio</u>: $23.749</h3>
-            <button>Comprar</button>
-            <button>Agregar al carrito</button>
+            <button class="PButton">Comprar</button>
+            <button class="PButton">Agregar al carrito</button>
         </div>
 </div>        
 </body>
