--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <form>
         <!-- USERNAME INPUT -->
         <label for="username">Usuario</label>
-        <input type="text" placeholder="Ingresa tu nombre de usuario">
+        <input type="text" placeholder="Ingresa tu nombre de usuario" required>
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
-        <input type="password" placeholder="Ingresa tu Contraseña">
+        <input type="password" placeholder="Ingresa tu Contraseña" required>
         <a class="shop" href="Cards.html">Inicia sesion</a><br><br>
         <a href="#">¿Perdiste tu contraseña?</a><br>
         <a href="#">¿No tienes una cuenta?</a>
