correccion de la NAVBAR

--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="esindex.css">
     <title>Zamazor</title>
 </head>
-<body>
+<body ID="Accesorios">
     <div class="navbar">
         <div class="item">
             <a class="logo" href="index.html">
