--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -23,6 +23,11 @@
                  <button class="nav">ACCESORIOS</button>
             </a>
         </div>
+        <div>
+            <a href="#"> 
+                 <button class="nav">CARRITO</button>
+        </a>
+        </div>
         <div class="nav" style="background-color:rgba(255, 255, 255, 0) ;">
             <a href="index.html"><button id="but"><img src="img/user.png" style="height: 15px;">Registrar</button></a>
             <a href="aboutUs.html"><button id="but"><img src="https://github.com/Nahir13/Ecommerce/blob/main/img/AboutUs.png?raw=true" style="height: 12px;">Nosotros</button>
