--- a/aboutUs.html
+++ b/aboutUs.html
@@ -24,7 +24,7 @@
         </a>
         </div>
         <div>
-            <a href="."> 
+            <a href="Carrito.html"> 
                  <button class="nav">CARRITO</button>
         </a>
         </div>
