--- a/Carrito.html
+++ b/Carrito.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=CARRITO, initial-scale=1.0">
     <title>CARRITO</title>
     <link rel="stylesheet" href="esindex.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body ID="carrito">
     <div class="navbar">
