agrego más cards de accesorios

--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -10,8 +10,8 @@
     <div class="navbar">
         <div class="item">
             <a class="logo" href="index.html">
-         <div id="logo"> </div>
-        </a>
+                <div id="logo"> </div>
+            </a>
         </div>
         <div>
             <a href="Cards.html"> 
@@ -26,7 +26,7 @@
         <div>
             <a href="Carrito.html"> 
                  <button class="nav">CARRITO</button>
-        </a>
+            </a>    
         </div>
         <div class="nav" style="background-color:rgba(255, 255, 255, 0) ;">
             <a href="index.html"><button id="but"><img src="img/user.png" style="height: 15px;">Registrar</button></a>
@@ -39,12 +39,10 @@
 <div class="contenedor">
     <h1>Filtros</h1>
     <hr>
-    <h5>Color:</h5>
+    <h5>Accesorios:</h5>
      <select name="select">
-    <option value="Azul" selected>Azul</option>
-    <option value="Rojo">Rojo</option>
-    <option value="Gris">Gris</option>
-    <option value="Negro">Negro</option>
+    <option value="Azul" selected>Exterior del Auto</option>
+    <option value="Rojo">Interior del Auto</option>
     </select>
     <hr>
     <h5>Marca:</h5>
@@ -59,8 +57,8 @@
     <h5>Precio:</h5>
     <select name="select">
     <label for="radio">
-    <option value="Precio" selected>Hasta $1.000</option>
-    <option value="">De $1.000 a $5.000</option>
+    <option value="Precio" selected>Hasta $1.500</option>
+    <option value="">De $1.500 a $5.000</option>
     <option value="">Más de $5.000</option>
     </select>
 </div>
@@ -68,31 +66,76 @@
         <div class="foto">
             <h4>Focos de repuesto</h4>
             <hr>
-            <h3><u>Precio</u>: $6.765</h3>
+            <h3><u>Precio</u>: ARS$4.765</h3>
             <button class="PButton">Comprar</button>
-            <button class="PButton">Agregar al carrito</button>
+            <a href="carrito.html">
+                <button class="PButton">Agregar al carrito</button>
+            </a>
         </div>
         <div class="foto1">
             <h4>Optica</h4>
             <hr>
-            <h3><u>Precio</u>: $25.000</h3>
+            <h3><u>Precio</u>: ARS$25.000</h3>
             <button class="PButton">Comprar</button>
-            <button class="PButton">Agregar al carrito</button>
+            <a href="carrito.html">
+                <button class="PButton">Agregar al carrito</button>
+            </a>
         </div>
         <div class="foto2">
             <h4>Cubre Asiento</h4>
             <hr>
-            <h3><u>Precio</u>: $58.275</h3>
+            <h3><u>Precio</u>: ARS$58.275</h3>
             <button class="PButton">Comprar</button>
-            <button class="PButton">Agregar al carrito</button>
+            <a href="carrito.html">
+                <button class="PButton">Agregar al carrito</button>
+            </a>
         </div>
         <div class="foto3">
             <h4>Apoya Cabeza</h4>
             <hr>
-            <h3><u>Precio</u>: $23.749</h3>
+            <h3><u>Precio</u>: ARS$23.749</h3>
             <button class="PButton">Comprar</button>
-            <button class="PButton">Agregar al carrito</button>
+            <a href="carrito.html">
+                <button class="PButton">Agregar al carrito</button>
+            </a>
         </div>
+        <div class="foto4">
+            <h4>Palanca de Cambios</h4>
+            <hr>
+            <h3><u>Precio</u>: ARS$25.000</h3>
+            <button class="PButton">Comprar</button>
+            <a href="carrito.html">
+                <button class="PButton">Agregar al carrito</button>
+            </a>    
+        </div>
+        <div class="foto5">
+            <h4>Burro de Arranque</h4>
+            <hr>
+            <h3><u>Precio</u>: ARS$56.765</h3>
+            <button class="PButton">Comprar</button>
+            <a href="carrito.html">
+                <button class="PButton">Agregar al carrito</button>
+            </a>    
+        </div>
+        <div class="foto6">
+            <h4>Limpia parabrisas</h4>
+            <hr>
+            <h3><u>Precio</u>: ARS$9.500</h3>
+            <button class="PButton">Comprar</button>
+            <a href="carrito.html">
+                <button class="PButton">Agregar al carrito</button>
+            </a>
+        </div>
+        <div class="foto7">
+            <h4>Aromatizante</h4>
+            <hr>
+            <h3><u>Precio</u>: ARS$1.500</h3>
+            <button class="PButton">Comprar</button>
+            <a href="carrito.html">
+                <button class="PButton">Agregar al carrito</button>
+            </a>
+        </div>
+    </div>
 </div>        
 </body>
 </html>
