correccion de la Nav-bar

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="esindex.css">
 </head>
 <body id="aboutUs">
-    <div class="navbar">
+    <div class="nav-zamazor">
         <div class="item">
             <a class="logo" href="index.html">
          <div id="logo"> </div>
@@ -15,20 +15,20 @@
         </div>
         <div>
             <a href="Cards.html"> 
-                 <button class="nav">PRODUCTOS</button>
+                 <button class="nav-button">PRODUCTOS</button>
         </a>
         </div>
         <div>
             <a href="productosespecificos.html"> 
-                 <button class="nav">ACCESORIOS</button>
+                 <button class="nav-button">ACCESORIOS</button>
         </a>
         </div>
         <div>
             <a href="Carrito.html"> 
-                 <button class="nav">CARRITO</button>
+                 <button class="nav-button">CARRITO</button>
         </a>
         </div>
-        <div class="nav" style="background-color:rgba(255, 255, 255, 0) ;">
+        <div class="nav-button" style="background-color:rgba(255, 255, 255, 0) ;">
            <a href="index.html"><button id="but"><img src="https://github.com/Nahir13/Ecommerce/blob/main/img/user.png?raw=true" style="height: 15px;">Registrar</button></a> 
             <a href="aboutUs.html"><button id="but"><img src="https://github.com/Nahir13/Ecommerce/blob/main/img/AboutUs.png?raw=true" style="height: 12px;">Nosotros</button></a>
         </div>
