--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -170,25 +170,25 @@
 <br>
 <h2 class="autosventa">Repuestos</h2>
 <div class="productos">
-    <div class="foto">
+    <div class="fotoo">
         <h4>Focos de repuesto</h4>
         <hr>
         <h3><u>Precio</u>: $6.765</h3>
         <div class="boton"><h6>¡COMPRA YA!</h6></div>
     </div>
-    <div class="foto1">
+    <div class="fotoo1">
         <h4>Optica</h4>
         <hr>
         <h3><u>Precio</u>: $25.000</h3>
         <div class="boton"><h6>¡COMPRA YA!</h6></div>
     </div>
-    <div class="foto2">
+    <div class="fotoo2">
         <h4>Cubre Asiento</h4>
         <hr>
         <h3><u>Precio</u>: $58.275</h3>
         <div class="boton"><h6>¡COMPRA YA!</h6></div>
     </div>
-    <div class="foto3">
+    <div class="fotoo3">
         <h4>Apoya Cabeza</h4>
         <hr>
         <h3><u>Precio</u>: $23.749</h3>
