--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -5,7 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zamazor</title>
     <link rel="stylesheet" href="esindex.css">
-    
+    <style>
+    .displaygrid{
+        margin-top: 5%;
+       display: grid;
+    grid-template-columns: repeat(4, 25%);
+    /* gap: 5px; */
+    grid-template-rows: repeat(6, 25%);
+    justify-content: start;
+    div {
+        width: 100%;
+        /* overflow: hidden; */
+        filter: brightness(60%);
+
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            position: relative;
+        }
+        .h2e{
+            position: absolute; top: 440px;
+            font-size: 60px;
+            margin-left: 30px;
+        }
+        .h2b{
+            position: absolute; top: 280px;
+            font-size: 50px;
+            margin-left: 25px;
+
+        }
+        h2:hover{
+            -webkit-box-shadow: 22px 32px 37px -27px rgba(0,0,0,0.52);
+-moz-box-shadow: 22px 32px 37px -27px rgba(0,0,0,0.52);
+box-shadow: 22px 32px 37px -27px rgba(0,0,0,0.52);
+transform: scale(1.15);
+        }
+    }
+
+    .item-1 {
+        grid-column: 1 / span 3;
+        grid-row: 1 / span 3;
+
+    }
+    .item-2 {
+        grid-row: 1/ span 2;
+    }
+    .item-3{
+        grid-row: 3/  5; 
+    }
+    .item-4{
+        grid-column: 1/ span 3;
+
+    }
+
+    }
+    /* .aimg1 {
+        width: 450px;
+        height: 300px;
+        object-fit: cover;
+    }
+    .aimg2 {
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+    } */
+    .grid-card {
+    /* width: 300px;
+    height: 450px; */
+    border: #B2C8BA solid 1px;
+    /* background-color: #FFFFFF; */
+    }
+</style>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
