--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -240,7 +240,7 @@ transform: scale(1.15);
 <br>
 <br>
 <h2 class="autosventa">Repuestos</h2>
-<div class="productos">
+<div class="productos2">
     <div class="fotoo">
         <h4>Focos de repuesto</h4>
         <hr>
@@ -268,7 +268,7 @@ transform: scale(1.15);
 </div>
 <a href="#" class="vermass" onclick="mas('vermas');" id="vermas"><center>Ver más</center></a>
 <div id="redesplegar" style="display:none;">
-<div class="productos">
+<div class="productos2">
     <div class="foto">
         <h4>Focos de repuesto</h4>
         <hr>
