bases de el carrito

--- a/Carrito.html
+++ b/Carrito.html
@@ -34,5 +34,21 @@
             <a href="aboutUs.html"><button id="but"><img src="https://github.com/Nahir13/Ecommerce/blob/main/img/AboutUs.png?raw=true" style="height: 12px;">Nosotros</button></a>
         </div>
     </div>
+    <div class="text-carrito">
+        <div class="carrito-sect-articulo">
+            <div class="articulo-carrito">
+
+            </div>
+            <div class="articulo-carrito">
+
+            </div>
+            <div class="sector-carrito">
+                
+            </div>
+        </div>
+        <div class="carrito-sect-articulo">
+            <button class="boton-comprar">COMPRAR</button>
+        </div>
+    </div>
 </body>
 </html>
