correcciones del carrito

--- a/Carrito.html
+++ b/Carrito.html
@@ -10,7 +10,7 @@
 <body ID="carrito">
     <div class="nav-zamazor">
         <div class="item">
-            <a class="logo" href="index.html">
+            <a class="logo" href="paginaprincipal.html">
          <div id="logo"> </div>
         </a>
         </div>
@@ -48,6 +48,9 @@
         </div>
         <div class="carrito-sect-articulo">
             <button class="boton-comprar">COMPRAR</button>
+        </div>
+        <div>
+
         </div>
     </div>
 </body>
