--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,7 +9,7 @@
 <body id="aboutUs">
     <div class="nav-zamazor">
         <div class="item">
-            <a class="logo" href="index.html">
+            <a class="logo" href="paginaprincipal.html">
          <div id="logo"> </div>
         </a>
         </div>
