--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -83,7 +83,7 @@ transform: scale(1.15);
 <body class="cuerpo">
     <div class="nav-zamazor">
         <div class="item">
-            <a class="logo" href="index.html">
+            <a class="logo" href="paginaprincipal.html">
          <div id="logo"> </div>
         </a>
         </div>
