--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -9,7 +9,7 @@
 <body ID="Accesorios">
     <div class="nav-zamazor">
         <div class="item">
-            <a class="logo" href="index.html">
+            <a class="logo" href="paginaprincipal.html">
                 <div id="logo"> </div>
             </a>
         </div>
