--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -9,7 +9,7 @@
 <body ID="Accesorios">
     <div class="nav-zamazor">
         <div class="item">
-            <a class="logo" href="paginaprincipal.html">
+            <a class="logo" href="index.html">
                 <div id="logo"> </div>
             </a>
         </div>
@@ -40,7 +40,7 @@
     <h1>Filtros</h1>
     <hr>
     <h5>Accesorios:</h5>
-     <select name="select">
+    <select name="select">
     <option value="Azul" selected>Exterior del Auto</option>
     <option value="Rojo">Interior del Auto</option>
     </select>
@@ -49,9 +49,9 @@
     <select name="select">
         <label for="radio">
     <option value="" selected>Chevrolet</option>
-    <option value="">Dodge</option>
-    <option value="">Ford</option>
-    <option value="">Tesla</option>
+    <option value="">Honda</option>
+    <option value="">Toyota</option>
+    <option value="">Subaru</option>
     </select>
     <hr>
     <h5>Precio:</h5>
