--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
     <div class="login-box">
       <img src="img/Zamazor.jpg" class="avatar" alt="Avatar Image">
-      <h1>Compra tu auto en Zamazor</h1>
+      <h6>Compra tu auto en Zamazor</h6>
       <form>
         <!-- USERNAME INPUT -->
         <label for="username">Usuario</label>
-        <input type="text" placeholder="Ingresa tu nombre de usuario">
+        <input type="text" placeholder="Ingresa tu nombre de usuario" required>
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
-        <input type="password" placeholder="Ingresa tu Contraseña">
-        <a class="shop" href="shop.html">Inicia sesion</a><br><br>
+        <input type="password" placeholder="Ingresa tu Contraseña" required>
+        <a class="shop" href="Cards.html">Inicia sesion</a><br><br>
         <a href="#">¿Perdiste tu contraseña?</a><br>
         <a href="#">¿No tienes una cuenta?</a>
       </form>
