--- a/Carrito.html
+++ b/Carrito.html
@@ -66,9 +66,8 @@
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div>
-                                                        <img src="foto producto"
-                                                            class="img-fluid rounded-3" alt="Shopping item"
-                                                            style="width: 65px;">
+                                                        <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/sw4%201.jpg?raw=true"
+                                                            class="img-fluid rounded-1" alt="Shopping item">
                                                     </div>
                                                     <div class="ms-3">
                                                         <h5>Producto</h5>
@@ -93,9 +92,8 @@
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div>
-                                                        <img src="foto producto"
-                                                            class="img-fluid rounded-3" alt="Shopping item"
-                                                            style="width: 65px;">
+                                                        <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/subaro%201.jpg?raw=true"
+                                                            class="img-fluid rounded-3" alt="Shopping item">
                                                     </div>
                                                     <div class="ms-3">
                                                         <h5>Producto</h5>
@@ -120,9 +118,8 @@
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div>
-                                                        <img src="foto producto"
-                                                            class="img-fluid rounded-3" alt="Shopping item"
-                                                            style="width: 65px;">
+                                                        <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/hilux%201.jpg?raw=true"
+                                                            class="img-fluid rounded-3" alt="Shopping item">
                                                     </div>
                                                     <div class="ms-3">
                                                         <h5>Producto</h5>
@@ -147,9 +144,8 @@
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div>
-                                                        <img src="foto producto"
-                                                            class="img-fluid rounded-3" alt="Shopping item"
-                                                            style="width: 65px;">
+                                                        <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/civic%201.jpg?raw=true"
+                                                            class="img-fluid rounded-3" alt="Shopping item">
                                                     </div>
                                                     <div class="ms-3">
                                                         <h5>Producto</h5>
@@ -176,8 +172,8 @@
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between align-items-center mb-4">
                                                 <h5 class="mb-0">Detalles de la compra</h5>
-                                                <img src="foto logo"
-                                                    class="img-fluid rounded-3" style="width: 45px;" alt="Avatar">
+                                                <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/Logo%20chiquito.jpg?raw=true" width="50px"
+                                                    class="img-fluid rounded-3"alt="Avatar">
                                             </div>
                                             <a href="#!" type="submit" class="text-white"><i
                                                     class="fab fa-cc-mastercard fa-2x me-2"></i></a>
