--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -240,89 +240,60 @@ transform: scale(1.15);
 <br>
 <br>
 <h2 class="autosventa">Repuestos</h2>
-    <div class="productos">
-        <div class="foto">
-            <h4>Focos de repuesto</h4>
-            <hr>
-            <h3><u>Precio</u>: ARS$4.765</h3>
-            <button class="PButton">Comprar</button>
-            <a href="carrito.html">
-                <button class="PButton">Agregar al carrito</button>
-            </a>
-        </div>
-        <div class="foto1">
-            <h4>Optica</h4>
-            <hr>
-            <h3><u>Precio</u>: ARS$25.000</h3>
-            <button class="PButton">Comprar</button>
-            <a href="carrito.html">
-                <button class="PButton">Agregar al carrito</button>
-            </a>
-        </div>
-        <div class="foto2">
-            <h4>Cubre Asiento</h4>
-            <hr>
-            <h3><u>Precio</u>: ARS$58.275</h3>
-            <button class="PButton">Comprar</button>
-            <a href="carrito.html">
-                <button class="PButton">Agregar al carrito</button>
-            </a>
-        </div>
-        <div class="foto3">
-            <h4>Apoya Cabeza</h4>
-            <hr>
-            <h3><u>Precio</u>: ARS$23.749</h3>
-            <button class="PButton">Comprar</button>
-            <a href="carrito.html">
-                <button class="PButton">Agregar al carrito</button>
-            </a>
-        </div>
-        
-        </div>
+<div class="productos">
+    <div class="footoo">
+        <h4>Focos de repuesto</h4>
+        <hr>
+        <h3><u>Precio</u>: $6.765</h3>
+        <div class="boton"><h6>¡COMPRA YA!</h6></div>
     </div>
+    <div class="footoo1">
+        <h4>Optica</h4>
+        <hr>
+        <h3><u>Precio</u>: $25.000</h3>
+        <div class="boton"><h6>¡COMPRA YA!</h6></div>
     </div>
+    <div class="footoo2">
+        <h4>Cubre Asiento</h4>
+        <hr>
+        <h3><u>Precio</u>: $58.275</h3>
+        <div class="boton"><h6>¡COMPRA YA!</h6></div>
+    </div>
+    <div class="footoo3">
+        <h4>Apoya Cabeza</h4>
+        <hr>
+        <h3><u>Precio</u>: $23.749</h3>
+        <div class="boton"><h6>¡COMPRA YA!</h6></div>
+    </div>
+</div>
 <a href="#" class="vermass" onclick="mas('vermas');" id="vermas"><center>Ver más</center></a>
 <div id="redesplegar" style="display:none;">
-    <div class="productos">
-        
-        <div class="foto4">
-            <h4>Palanca de Cambios</h4>
-            <hr>
-            <h3><u>Precio</u>: ARS$25.000</h3>
-            <button class="PButton">Comprar</button>
-            <a href="carrito.html">
-                <button class="PButton">Agregar al carrito</button>
-            </a>
-        </div>
-        <div class="foto5">
-            <h4>Burro de Arranque</h4>
-            <hr>
-            <h3><u>Precio</u>: ARS$56.765</h3>
-            <button class="PButton">Comprar</button>
-            <a href="carrito.html">
-                <button class="PButton">Agregar al carrito</button>
-            </a>
-        </div>
-        <div class="foto6">
-            <h4>Limpia parabrisas</h4>
-            <hr>
-            <h3><u>Precio</u>: ARS$9.500</h3>
-            <button class="PButton">Comprar</button>
-            <a href="carrito.html">
-                <button class="PButton">Agregar al carrito</button>
-            </a>
-        </div>
-        <div class="foto7">
-            <h4>Aromatizante</h4>
-            <hr>
-            <h3><u>Precio</u>: ARS$1.500</h3>
-            <button class="PButton">Comprar</button>
-            <a href="carrito.html">
-                <button class="PButton">Agregar al carrito</button>
-            </a>
-        </div>
+<div class="productos">
+    <div class="footoo">
+        <h4>Focos de repuesto</h4>
+        <hr>
+        <h3><u>Precio</u>: $6.765</h3>
+        <div class="boton"><h6>¡COMPRA YA!</h6></div>
     </div>
+    <div class="footoo1">
+        <h4>Optica</h4>
+        <hr>
+        <h3><u>Precio</u>: $25.000</h3>
+        <div class="boton"><h6>¡COMPRA YA!</h6></div>
     </div>
+    <div class="footoo2">
+        <h4>Cubre Asiento</h4>
+        <hr>
+        <h3><u>Precio</u>: $58.275</h3>
+        <div class="boton"><h6>¡COMPRA YA!</h6></div>
+    </div>
+    <div class="footoo3">
+        <h4>Apoya Cabeza</h4>
+        <hr>
+        <h3><u>Precio</u>: $23.749</h3>
+        <div class="boton"><h6>¡COMPRA YA!</h6></div>
+    </div>
+</div>
 <a href="#" class="vermenoss" onclick="mas('vermenos');" id="vermenos"><center>Ver menos</center></a>
 </div>
 
@@ -334,7 +305,6 @@ transform: scale(1.15);
 </div>
 
 <script src="myscript.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
 </html>
