--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -72,7 +72,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$4.765</h3>
             <button class="PButton">Comprar</button>
-            <a href="carrito.html">
+            <a href="Carrito.html">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -81,7 +81,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$25.000</h3>
             <button class="PButton">Comprar</button>
-            <a href="carrito.html">
+            <a href="Carrito.html">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -90,7 +90,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$58.275</h3>
             <button class="PButton">Comprar</button>
-            <a href="carrito.html">
+            <a href="Carrito.html">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -99,7 +99,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$23.749</h3>
             <button class="PButton">Comprar</button>
-            <a href="carrito.html">
+            <a href="Carrito.html">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -108,7 +108,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$25.000</h3>
             <button class="PButton">Comprar</button>
-            <a href="carrito.html">
+            <a href="Carrito.html">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -117,7 +117,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$56.765</h3>
             <button class="PButton">Comprar</button>
-            <a href="carrito.html">
+            <a href="Carrito.html">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -126,7 +126,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$9.500</h3>
             <button class="PButton">Comprar</button>
-            <a href="carrito.html">
+            <a href="Carrito.html">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -135,7 +135,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$1.500</h3>
             <button class="PButton">Comprar</button>
-            <a href="carrito.html">
+            <a href="Carrito.html">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
