--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -166,7 +166,7 @@ transform: scale(1.15);
 </div>
 <a href="#" class="vermass" onclick="vermas('mas');" id="mas"><center>Ver más</center></a>
 <div id="desplegar" style="display:none;">
-<div class="conteinerr">
+<div class="conteiner">
 <div class="card">
     <div class="autos_5">
         <div class="imagen_del_auto_5"></div>
