--- a/Carrito.html
+++ b/Carrito.html
@@ -7,48 +7,50 @@
     <title>CARRITO</title>
     <link rel="stylesheet" href="esindex.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body ID="carrito">
-        <div class="nav-zamazor">
-            <div class="item">
-                <a class="logo" href="index.html">
-                    <div id="logo"> </div>
-                </a>
-            </div>
-            <div>
-                <a href="Cards.html">
-                    <button class="nav-button">PRODUCTOS </button>
-                </a>
-            </div>
-            <div>
-                <a href="productosespecificos.html">
-                    <button class="nav-button">ACCESORIOS</button>
-                </a>
-            </div>
-            <div>
-                <a href="Carrito.html">
-                    <button class="nav-button">CARRITO</button>
-                </a>
-            </div>
-            <div class="nav-button" style="background-color:rgba(255, 255, 255, 0) ;">
-                <a href="index.html"><button id="but"><img
-                            src="https://github.com/Nahir13/Ecommerce/blob/main/img/user.png?raw=true"
-                            style="height: 15px;">Registrar</button></a>
-                <a href="aboutUs.html"><button id="but"><img
-                            src="https://github.com/Nahir13/Ecommerce/blob/main/img/AboutUs.png?raw=true"
-                            style="height: 12px;">Nosotros</button></a>
-            </div>
+    <div class="nav-zamazor">
+        <div class="item">
+            <a class="logo" href="index.html">
+                <div id="logo"> </div>
+            </a>
         </div>
+        <div>
+            <a href="Cards.html">
+                <button class="nav-button">PRODUCTOS </button>
+            </a>
+        </div>
+        <div>
+            <a href="productosespecificos.html">
+                <button class="nav-button">ACCESORIOS</button>
+            </a>
+        </div>
+        <div>
+            <a href="Carrito.html">
+                <button class="nav-button">CARRITO</button>
+            </a>
+        </div>
+        <div class="nav-button" style="background-color:rgba(255, 255, 255, 0) ;">
+            <a href="index.html"><button id="but"><img
+                        src="https://github.com/Nahir13/Ecommerce/blob/main/img/user.png?raw=true"
+                        style="height: 15px;">Registrar</button></a>
+            <a href="aboutUs.html"><button id="but"><img
+                        src="https://github.com/Nahir13/Ecommerce/blob/main/img/AboutUs.png?raw=true"
+                        style="height: 12px;">Nosotros</button></a>
+        </div>
+    </div>
     <section class="h-100 h-custom">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col">
-                    <div class="card">
+                    <div class="card w-100">
                         <div class="card-body p-4">
                             <div class="row">
                                 <div class="col-lg-7">
-                                    <h5 class="mb-3"><a href="Cards.html" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Continuar comprando</a></h5>
+                                    <h5 class="mb-3"><a href="Cards.html" class="text-body"><i
+                                                class="fas fa-long-arrow-alt-left me-2"></i>Continuar comprando</a></h5>
                                     <hr>
                                     <div class="d-flex justify-content-between align-items-center mb-4">
                                         <div>
@@ -56,22 +58,23 @@
                                             <p class="mb-0 text-secondary">Tienes 4 productos en tu carrito</p>
                                         </div>
                                         <div>
-                                            <p class="mb-0"><span class="text-muted">Filtrar por:</span> <a href="#!"
-                                                    class="text-body">Precio
+                                            <p class="mb-0 mx-0"><span class="text-muted">Filtrar por:</span> <a
+                                                    href="#!" class="text-body">Precio
                                                     <i class="fas fa-angle-down mt-1"></i></a></p>
                                         </div>
                                     </div>
-                                    <div class="card mb-3">
+                                    <div class="card mb-3" style="width: 95%; height: 15%;">
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div>
-                                                        <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/sw4%201.jpg?raw=true"
-                                                            class="img-fluid rounded-1" alt="Shopping item">
+                                                        <img style="width: 170px;"
+                                                            src="https://github.com/Nahir13/Ecommerce/blob/main/img/sw4%201.jpg?raw=true"
+                                                            class="img-fluid rounded-3" alt="Shopping item">
                                                     </div>
                                                     <div class="ms-3">
-                                                        <h5>Producto</h5>
-                                                        <p class="small mb-0 text-secondary">Características</p>
+                                                        <h5>SW4 Diamond</h5>
+                                                        <p class="small mb-0 text-secondary">Color: Blanco</p>
                                                     </div>
                                                 </div>
                                                 <div class="d-flex flex-row align-items-center">
@@ -79,7 +82,7 @@
                                                         <h5 class="fw-normal mb-0">1</h5>
                                                     </div>
                                                     <div style="width: 80px;">
-                                                        <h5 class="mb-0">$precio</h5>
+                                                        <h5 class="mb-0">USD 59.900</h5>
                                                     </div>
                                                     <a href="#!" style="color: #cecece;"><i
                                                             class="fas fa-trash-alt"></i></a>
@@ -87,25 +90,26 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card mb-3">
+                                    <div class="card mb-3" style="width: 95%; height: 20%;">
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div>
-                                                        <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/subaro%201.jpg?raw=true"
+                                                        <img style="width: 170px;"
+                                                            src="https://github.com/Nahir13/Ecommerce/blob/main/img/subaro%201.jpg?raw=true"
                                                             class="img-fluid rounded-3" alt="Shopping item">
                                                     </div>
                                                     <div class="ms-3">
-                                                        <h5>Producto</h5>
-                                                        <p class="small mb-0 text-secondary">Color</p>
+                                                        <h5>Subaru Forester</h5>
+                                                        <p class="small mb-0 text-secondary">Gris</p>
                                                     </div>
                                                 </div>
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div style="width: 50px;">
-                                                        <h5 class="fw-normal mb-0">2</h5>
+                                                        <h5 class="fw-normal mb-0">1</h5>
                                                     </div>
                                                     <div style="width: 80px;">
-                                                        <h5 class="mb-0">$precio</h5>
+                                                        <h5 class="mb-0">USD 39.900</h5>
                                                     </div>
                                                     <a href="#!" style="color: #cecece;"><i
                                                             class="fas fa-trash-alt"></i></a>
@@ -113,25 +117,26 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card mb-3">
+                                    <div class="card mb-3" style="width: 95%; height: 19%;">
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div>
                                                         <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/hilux%201.jpg?raw=true"
-                                                            class="img-fluid rounded-3" alt="Shopping item">
+                                                            class="img-fluid rounded-3" width="170px"
+                                                            alt="Shopping item">
                                                     </div>
                                                     <div class="ms-3">
-                                                        <h5>Producto</h5>
-                                                        <p class="small mb-0 text-secondary">Color</p>
+                                                        <h5>Toyota Hilux</h5>
+                                                        <p class="small mb-0 text-secondary">Gris</p>
                                                     </div>
                                                 </div>
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div style="width: 50px;">
-                                                        <h5 class="fw-normal mb-0">3</h5>
+                                                        <h5 class="fw-normal mb-0">1</h5>
                                                     </div>
                                                     <div style="width: 80px;">
-                                                        <h5 class="mb-0">$precio</h5>
+                                                        <h5 class="mb-0">USD 30.750</h5>
                                                     </div>
                                                     <a href="#!" style="color: #cecece;"><i
                                                             class="fas fa-trash-alt"></i></a>
@@ -139,25 +144,26 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card mb-3 mb-lg-0">
+                                    <div class="card mb-3 mb-lg-0" style="width: 95%; height: 20%;">
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between">
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div>
                                                         <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/civic%201.jpg?raw=true"
-                                                            class="img-fluid rounded-3" alt="Shopping item">
+                                                            class="img-fluid rounded-3" width="170px" h
+                                                            alt="Shopping item">
                                                     </div>
                                                     <div class="ms-3">
-                                                        <h5>Producto</h5>
-                                                        <p class="small mb-0 text-secondary">Color</p>
+                                                        <h5>Honda Civic</h5>
+                                                        <p class="small mb-0 text-secondary">Blanco</p>
                                                     </div>
                                                 </div>
                                                 <div class="d-flex flex-row align-items-center">
                                                     <div style="width: 50px;">
-                                                        <h5 class="fw-normal mb-0">4</h5>
+                                                        <h5 class="fw-normal mb-0">1</h5>
                                                     </div>
                                                     <div style="width: 80px;">
-                                                        <h5 class="mb-0">$precio</h5>
+                                                        <h5 class="mb-0">USD 24.983</h5>
                                                     </div>
                                                     <a href="#!" style="color: #cecece;"><i
                                                             class="fas fa-trash-alt"></i></a>
@@ -166,14 +172,13 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-5">
-
-                                    <div class="card bg-dark text-white rounded-3">
+                                <div class="col-lg-5 w-25">
+                                    <div class="card bg-dark text-white rounded-3 my-5 d-flex" style="width: 170%;">
                                         <div class="card-body">
                                             <div class="d-flex justify-content-between align-items-center mb-4">
                                                 <h5 class="mb-0">Detalles de la compra</h5>
-                                                <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/Logo%20chiquito.jpg?raw=true" width="50px"
-                                                    class="img-fluid rounded-3"alt="Avatar">
+                                                <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/Logo%20chiquito.jpg?raw=true"
+                                                    width="50px" class="img-fluid rounded-3" alt="Avatar">
                                             </div>
                                             <a href="#!" type="submit" class="text-white"><i
                                                     class="fab fa-cc-mastercard fa-2x me-2"></i></a>
@@ -236,8 +241,8 @@
                                             <button type="button" data-mdb-button-init data-mdb-ripple-init
                                                 class="btn btn-black btn-block btn-lg bg-info">
                                                 <div class="d-flex justify-content-between">
-                                                        <span>$precio</span>
-                                                        <span>Comprar<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
+                                                    <span>$precio</span>
+                                                    <span>Comprar<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                                 </div>
                                             </button>
                                         </div>
@@ -254,4 +259,5 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
