--- a/Carrito.html
+++ b/Carrito.html
@@ -101,7 +101,7 @@
                                                     </div>
                                                     <div class="ms-3">
                                                         <h5>Subaru Forester</h5>
-                                                        <p class="small mb-0 text-secondary">Gris</p>
+                                                        <p class="small mb-0 text-secondary">Color: Gris</p>
                                                     </div>
                                                 </div>
                                                 <div class="d-flex flex-row align-items-center">
@@ -128,7 +128,7 @@
                                                     </div>
                                                     <div class="ms-3">
                                                         <h5>Toyota Hilux</h5>
-                                                        <p class="small mb-0 text-secondary">Gris</p>
+                                                        <p class="small mb-0 text-secondary">Color: Gris</p>
                                                     </div>
                                                 </div>
                                                 <div class="d-flex flex-row align-items-center">
@@ -155,7 +155,7 @@
                                                     </div>
                                                     <div class="ms-3">
                                                         <h5>Honda Civic</h5>
-                                                        <p class="small mb-0 text-secondary">Blanco</p>
+                                                        <p class="small mb-0 text-secondary">Color: Blanco</p>
                                                     </div>
                                                 </div>
                                                 <div class="d-flex flex-row align-items-center">
@@ -228,7 +228,7 @@
                                             <hr class="my-4">
                                             <div class="d-flex justify-content-between">
                                                 <p class="mb-2 text-secondary">Subtotal</p>
-                                                <p class="mb-2 text-secondary">$precio</p>
+                                                <p class="mb-2 text-secondary">USD 155.533</p>
                                             </div>
                                             <div class="d-flex justify-content-between">
                                                 <p class="mb-2 text-secondary">Envío</p>
