--- a/Carrito.html
+++ b/Carrito.html
@@ -232,11 +232,11 @@
                                             </div>
                                             <div class="d-flex justify-content-between">
                                                 <p class="mb-2 text-secondary">Envío</p>
-                                                <p class="mb-2 text-secondary">$precio</p>
+                                                <p class="mb-2 text-secondary">USD 15</p>
                                             </div>
                                             <div class="d-flex justify-content-between mb-4">
                                                 <p class="mb-2 text-secondary">Total(Incluye envío)</p>
-                                                <p class="mb-2 text-secondary">$precio</p>
+                                                <p class="mb-2 text-secondary">USD 170.533</p>
                                             </div>
                                             <button type="button" data-mdb-button-init data-mdb-ripple-init
                                                 class="btn btn-black btn-block btn-lg bg-info">
