agrego enlace a carrito

--- a/Carrito.html
+++ b/Carrito.html
@@ -180,14 +180,14 @@
                                                 <img src="https://github.com/Nahir13/Ecommerce/blob/main/img/Logo%20chiquito.jpg?raw=true"
                                                     width="50px" class="img-fluid rounded-3" alt="Avatar">
                                             </div>
-                                            <a href="#!" type="submit" class="text-white"><i
+                                            <!-- <a href="#!" type="submit" class="text-white"><i
                                                     class="fab fa-cc-mastercard fa-2x me-2"></i></a>
                                             <a href="#!" type="submit" class="text-white"><i
                                                     class="fab fa-cc-visa fa-2x me-2"></i></a>
                                             <a href="#!" type="submit" class="text-white"><i
                                                     class="fab fa-cc-amex fa-2x me-2"></i></a>
                                             <a href="#!" type="submit" class="text-white"><i
-                                                    class="fab fa-cc-paypal fa-2x"></i></a>
+                                                    class="fab fa-cc-paypal fa-2x"></i></a> -->
 
                                             <form class="mt-4">
                                                 <div data-mdb-input-init class="form-outline form-white mb-4">
@@ -240,9 +240,8 @@
                                             </div>
                                             <button type="button" data-mdb-button-init data-mdb-ripple-init
                                                 class="btn btn-black btn-block btn-lg bg-info">
-                                                <div class="d-flex justify-content-between">
-                                                    <span>$precio</span>
-                                                    <span>Comprar<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
+                                                <div class="d-flex justify-content-center">
+                                                    <span class="mx-5 my-1">USD 170.533 <br> Comprar<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                                 </div>
                                             </button>
                                         </div>
