--- a/Cards.html
+++ b/Cards.html
@@ -41,7 +41,9 @@
             <div class="detalles">
                 <h2>Honda CR-V</h2>
                 <P> La Honda CR-V es una opción popular para conductores que buscan una SUV versátil y confiable. Conocida por su interior espacioso, conducción confortable y eficiencia de combustible, la CR-V es una excelente opción para familias, viajeros y aventureros.</P>
-                <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                <a href="Carrito.html" style="color: aliceblue;">
+                    <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </a>
             </div>
         </div>
     </div>
@@ -51,8 +53,10 @@
             <div class="detalles_2">
                 <h2> honda-civic-2017</h2>
                 <P>El Honda Civic 2017 es un sedán compacto que ofrece una combinación de estilo, eficiencia y rendimiento. Con un diseño deportivo y moderno, un interior cómodo y tecnología de vanguardia, el Civic es una opción popular para conductores de todas las edades.
-                </P> 
-                <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </P>
+                <a href="Carrito.html" style="color: aliceblue;">
+                    <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </a>
             </div>
         </div>
     </div>
@@ -62,7 +66,9 @@
             <div class="detalles_3">
                 <h2>Mazda3</h2>
                 <P> El Mazda3 es un sedán compacto que destaca por su diseño elegante, manejo deportivo y tecnología de vanguardia. Con un interior refinado y un motor potente, el Mazda3 ofrece una experiencia de conducción excepcional.     </P>
-                <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                <a href="Carrito.html" style="color: aliceblue;">
+                    <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </a>
             </div>
         </div>
     </div>
@@ -72,8 +78,10 @@
             <div class="detalles_4">
                 <h2> Subaru Forester</h2>
                 <P>La Subaru Forester es una SUV compacta que combina versatilidad, seguridad y capacidad todoterreno. Con un diseño robusto, un interior espacioso y tecnología avanzada, la Forester es ideal para familias, viajeros y aventureros.
-                </P> 
-                <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </P>
+                <a href="Carrito.html" style="color: aliceblue;">
+                    <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </a> 
             </div>
         </div>
     </div>
@@ -84,7 +92,9 @@
                 <h2>Toyota Corolla</h2>
                 <P> El Toyota Corolla es un sedán compacto que ofrece confiabilidad, eficiencia de combustible y un valor excepcional. Con un diseño clásico, un interior espacioso y tecnología moderna, el Corolla es una opción popular para conductores de todas las edades.
                 </P>
-                <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                <a href="Carrito.html" style="color: aliceblue;">
+                    <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </a>
             </div>
         </div>
     </div>   
@@ -94,8 +104,10 @@
             <div class="detalles_6">
                 <h2>Toyota RAV4</h2>
                 <P> La Toyota RAV4 es una SUV compacta que combina versatilidad, eficiencia de combustible y capacidad todoterreno. Con un diseño moderno, un interior espacioso y tecnología avanzada, la RAV4 es ideal para familias, viajeros y aventureros urbanos.
-                </P> 
-                <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </P>
+                <a href="Carrito.html" style="color: aliceblue;">
+                    <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </a>
             </div>
         </div>
     </div>
@@ -106,7 +118,9 @@
                 <h2>Etios Sedán 2024</h2>
                 <P> El Toyota Etios Sedán 2024 es un sedán compacto conocido por su confiabilidad, economía de combustible y precio accesible. Con un diseño simple pero elegante, un interior espacioso y un motor rendidor, el Etios Sedán es una opción ideal para conductores que buscan un auto práctico para el día a día.
                 </P> 
-                <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                <a href="Carrito.html" style="color: aliceblue;">
+                    <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </a>
             </div>
         </div>
     </div>
@@ -116,7 +130,10 @@
             <div class="detalles_8">
                 <h2>SW4 Diamond 2024</h2>
                 <P> La SW4 Diamond 2024 es una SUV robusta y versátil que combina elegancia, potencia y tecnología de última generación. Con un diseño imponente, un interior confortable y un equipamiento completo, la SW4 Diamond es ideal para aquellos que buscan un vehículo para disfrutar de la aventura sin renunciar al confort y la seguridad.
-                </P> <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </P> 
+                <a href="Carrito.html" style="color: aliceblue;">
+                    <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </a>
             </div>
         </div>
     </div>
@@ -127,7 +144,9 @@
                 <h2>Yaris Hatchback</h2>
                 <P> El Yaris Hatchback es un auto compacto que destaca por su agilidad, eficiencia de combustible y diseño moderno. Con un tamaño ideal para la ciudad, un interior confortable y un manejo divertido, el Yaris Hatchback es la opción perfecta para conductores que buscan un auto práctico y divertido de conducir.
                 </P> 
-                <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                <a href="Carrito.html" style="color: aliceblue;">
+                    <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </a>
             </div>
         </div>
     </div>
@@ -138,7 +157,9 @@
                 <h2>Hilux SRVSRX 2024</h2>
                 <P> La Toyota Hilux SRV/SRX 2024 es una pick-up robusta y versátil que combina potencia, capacidad todoterreno y tecnología de última generación. Con un diseño imponente, un interior confortable y un equipamiento completo, la Hilux SRV/SRX es ideal para aquellos que buscan un vehículo para el trabajo, la aventura o el ocio.
                 </P> 
-                <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                <a href="Carrito.html" style="color: aliceblue;">
+                    <div class="boton"><h6>¡COMPRA YA!</h6></div>
+                </a>
             </div>
         </div>
     </div>
