--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -73,7 +73,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$4.765</h3>
             <button class="PButton">Comprar</button>
-            <a href="Carrito.html">
+            <a href="Carrito.html" style="color: transparent;">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -82,7 +82,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$25.000</h3>
             <button class="PButton">Comprar</button>
-            <a href="Carrito.html">
+            <a href="Carrito.html" style="color: transparent;">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -91,7 +91,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$58.275</h3>
             <button class="PButton">Comprar</button>
-            <a href="Carrito.html">
+            <a href="Carrito.html" style="color: transparent;">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -100,7 +100,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$23.749</h3>
             <button class="PButton">Comprar</button>
-            <a href="Carrito.html">
+            <a href="Carrito.html" style="color: transparent;">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -109,7 +109,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$25.000</h3>
             <button class="PButton">Comprar</button>
-            <a href="Carrito.html">
+            <a href="Carrito.html" style="color: transparent;">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -118,7 +118,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$56.765</h3>
             <button class="PButton">Comprar</button>
-            <a href="Carrito.html">
+            <a href="Carrito.html" style="color: transparent;">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -127,7 +127,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$9.500</h3>
             <button class="PButton">Comprar</button>
-            <a href="Carrito.html">
+            <a href="Carrito.html" style="color: transparent;">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
@@ -136,7 +136,7 @@
             <hr>
             <h3><u>Precio</u>: ARS$1.500</h3>
             <button class="PButton">Comprar</button>
-            <a href="Carrito.html">
+            <a href="Carrito.html" style="color: transparent;">
                 <button class="PButton">Agregar al carrito</button>
             </a>
         </div>
